; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_event/extr_event_send.c_esp_event_send.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_event/extr_event_send.c_esp_event_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ESP_OK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @esp_event_send(i32* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i64 @esp_event_send_to_default_loop(i32* %5)
  store i64 %6, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = load i64, i64* @ESP_OK, align 8
  %9 = icmp ne i64 %7, %8
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = load i64, i64* %4, align 8
  store i64 %11, i64* %2, align 8
  br label %22

12:                                               ; preds = %1
  %13 = load i32*, i32** %3, align 8
  %14 = call i64 @esp_event_send_legacy(i32* %13)
  store i64 %14, i64* %4, align 8
  %15 = load i64, i64* %4, align 8
  %16 = load i64, i64* @ESP_OK, align 8
  %17 = icmp ne i64 %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %12
  %19 = load i64, i64* %4, align 8
  store i64 %19, i64* %2, align 8
  br label %22

20:                                               ; preds = %12
  %21 = load i64, i64* @ESP_OK, align 8
  store i64 %21, i64* %2, align 8
  br label %22

22:                                               ; preds = %20, %18, %10
  %23 = load i64, i64* %2, align 8
  ret i64 %23
}

declare dso_local i64 @esp_event_send_to_default_loop(i32*) #1

declare dso_local i64 @esp_event_send_legacy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
